--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Home </a>
                 <a href="services.html">Services </a>
                 <a href="#">About </a>
-                <a href="#">Contact </a>
+                <a href="contact.html">Contact </a>
                 <a href="#">login </a>
             </nav>
         </section>
