--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TECHSUPPORT</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/sitelogo.png">
 </head>
 
 <body>
+    <header>
+        <section class="navsection">
+            <div class="logo">
+                <h1>TECH SUPPORT</h1>
+            </div>
+
+            <nav>
+                <a href="index.html">Home </a>
+                <a href="services.html">Services </a>
+                <a href="#">About </a>
+                <a href="contact.html">Contact </a>
+                <a href="#">login </a>
+            </nav>
+        </section>
+        <main>
+            <div class="container">
+                fhghghhg
+            </div>
+        </main>
+
+    </header>
+    <section>
+        <footer>
+            <div>
+                <h1> © 2021 TEAM TECH SUPPORT. All Rights Reserved</h1>
+            </div>
+        </footer>
+
+
+    </section>
+
 
 </body>
 
