--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <nav>
-                <a href="#">Home </a>
+                <a href="index.html">Home </a>
                 <a href="services.html">Services </a>
                 <a href="#">About </a>
                 <a href="contact.html">Contact </a>
