--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHSUPPORT</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="icon" href="images/sitelogo.png">
 </head>
 
@@ -26,8 +26,11 @@
             </nav>
         </section>
         <main>
-            <div class="container">
-                fhghghhg
+            <div class="slider">
+                <img src="images/rightphoto22.png" alt="">
+            </div>
+            <div class="connect">
+                <h1>Whatsaap us</h1>
             </div>
         </main>
 
